--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,18 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path="src/lib.rs"
+
+[[bin]]
+path="src/main.rs"
+name="zero2prod"
+
 [dependencies]
-actix-web = "3.3.2"
+actix = "0.11.0-beta.2"
+actix-web = "4.0.0-beta.3"
+
+[dev-dependencies]
+actix-rt = "2.0.2"
+reqwest = "0.11.4"
+tokio = "1.11.0"
