--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,19 @@ name="zero2prod"
 [dependencies]
 actix = "0.11.0-beta.2"
 actix-web = "4.0.0-beta.3"
+serde = { version = "1", features = ["derive"]}
+
+[dependencies.sqlx]
+version = "0.5.7"
+default-features = false
+features = [
+    "runtime-actix-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
 
 [dev-dependencies]
 actix-rt = "2.0.2"
