db almost works - about to add connection pool to app

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,10 @@ name="zero2prod"
 [dependencies]
 actix = "0.11.0-beta.2"
 actix-web = "4.0.0-beta.3"
+config = "0.11.0"
 serde = { version = "1", features = ["derive"]}
+uuid = { version = "0.8.1", features = ["v4"]}
+chrono = "0.4.19"
 
 [dependencies.sqlx]
 version = "0.5.7"
