--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -162,7 +162,7 @@ jobs:
         image: postgres:12
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
+          POSTGRES_PASSWORD: docker
           POSTGRES_DB: postgres
         ports:
           - 5432:5432
