--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,12 @@ config = "0.11.0"
 serde = { version = "1", features = ["derive"]}
 uuid = { version = "0.8.1", features = ["v4"]}
 chrono = "0.4.19"
+tracing = { version = "0.1", features = ["log"] }
+tracing-futures = "0.2.5"
+tracing-subscriber = {version = "0.2.12", features = ["registry", "env-filter"]}
+tracing-bunyan-formatter = "0.2.6"
+tracing-log = "0.1.2"
+tracing-actix-web = "0.4.0-beta.8"
 
 [dependencies.sqlx]
 version = "0.5.7"
@@ -34,5 +40,6 @@ features = [
 
 [dev-dependencies]
 actix-rt = "2.0.2"
+once_cell = "1.8.0"
 reqwest = "0.11.4"
 tokio = "1.11.0"
