--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ tracing-subscriber = {version = "0.2.12", features = ["registry", "env-filter"]}
 tracing-bunyan-formatter = "0.2.6"
 tracing-log = "0.1.2"
 tracing-actix-web = "0.4.0-beta.8"
+serde_json = "1.0.68"
 
 [dependencies.sqlx]
 version = "0.5.7"
