--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ tracing-bunyan-formatter = "0.2.6"
 tracing-log = "0.1.2"
 tracing-actix-web = "0.4.0-beta.8"
 serde_json = "1.0.68"
+unicode-segmentation = "1.8.0"
+validator = "0.14.0"
 
 [dependencies.sqlx]
 version = "0.5.7"
@@ -42,6 +44,10 @@ features = [
 
 [dev-dependencies]
 actix-rt = "2.0.2"
+claim = "0.5.0"
 once_cell = "1.8.0"
 reqwest = "0.11.4"
 tokio = "1.11.0"
+fake = "~2.3"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
