--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tracing-actix-web = "0.4.0-beta.8"
 serde_json = "1.0.68"
 unicode-segmentation = "1.8.0"
 validator = "0.14.0"
+reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
 
 [dependencies.sqlx]
 version = "0.5.7"
@@ -41,13 +42,13 @@ features = [
     "migrate",
     "offline"
 ]
-
 [dev-dependencies]
 actix-rt = "2.0.2"
 claim = "0.5.0"
 once_cell = "1.8.0"
-reqwest = "0.11.4"
-tokio = "1.11.0"
+tokio = { version = "1.11.0", features = ["rt", "macros"] }
 fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+wiremock = "0.5"
+serde_json = "1.0.68"
