--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -6,3 +6,8 @@ database:
   username: "postgres"
   password: "docker"
   database_name: "newsletter"
+email_client:
+  base_url: "localhost"
+  sender_email: "test@gmail.com"
+  authorization_token: "sample_token"
+  timeout_milliseconds: 10000
