--- a/configuration/production.yaml
+++ b/configuration/production.yaml
@@ -1,3 +1,6 @@
 application:
   host: 0.0.0.0
-  
+email_client:
+  base_url: "https://api.postmarkapp.com"  
+  sender_email: "mike@mhentges.com"
+  authorization_token: "d5936f79-86b5-4d79-a0e7-4c775c3adeae"
