--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ serde_json = "1.0.68"
 unicode-segmentation = "1.8.0"
 validator = "0.14.0"
 reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
+rand = { version = "0.8", features=["std_rng"] }
 
 [dependencies.sqlx]
 version = "0.5.7"
