--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,7 @@ path="src/main.rs"
 name="zero2prod"
 
 [dependencies]
-actix = "0.11.0-beta.2"
-actix-web = "4.0.0-beta.3"
+actix-web = "4.0.0-beta.8"
 config = "0.11.0"
 serde = { version = "1", features = ["derive"]}
 uuid = { version = "0.8.1", features = ["v4"]}
@@ -30,7 +29,11 @@ unicode-segmentation = "1.8.0"
 validator = "0.14.0"
 reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
 rand = { version = "0.8", features=["std_rng"] }
-
+opentelemetry = {version = "*", features=["rt-tokio"]}
+opentelemetry-otlp = "0.9.0"
+url = "2.2.2"
+tonic = "0.5.0"
+tracing-opentelemetry = "0.15.0"
 [dependencies.sqlx]
 version = "0.5.7"
 default-features = false
