--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,9 @@ unicode-segmentation = "1.8.0"
 validator = "0.14.0"
 reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
 rand = { version = "0.8", features=["std_rng"] }
-opentelemetry = {version = "*", features=["rt-tokio"]}
-opentelemetry-otlp = "0.9.0"
+opentelemetry = {version = "0.16.0", features=["rt-tokio", "metrics", "serialize"]}
+opentelemetry-otlp = { version = "0.9.0", features = ["http-proto", "reqwest-client"] }
+tokio = { version = "1.11", features = ["full"] }
 url = "2.2.2"
 tonic = "0.5.0"
 tracing-opentelemetry = "0.15.0"
