--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,9 @@ opentelemetry-otlp = { version = "0.9.0", features = ["http-proto", "reqwest-cli
 tokio = { version = "1.11", features = ["full"] }
 url = "2.2.2"
 tonic = "0.5.0"
+thiserror = "1.0"
 tracing-opentelemetry = "0.15.0"
+
 [dependencies.sqlx]
 version = "0.5.7"
 default-features = false
@@ -47,6 +49,8 @@ features = [
     "migrate",
     "offline"
 ]
+
+
 [dev-dependencies]
 actix-rt = "2.0.2"
 claim = "0.5.0"
