--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ tokio = { version = "1.11", features = ["full"] }
 url = "2.2.2"
 tonic = "0.5.0"
 thiserror = "1.0"
+anyhow = "1"
 tracing-opentelemetry = "0.15.0"
 
 [dependencies.sqlx]
