--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,9 @@ tonic = "0.5.0"
 thiserror = "1.0"
 anyhow = "1"
 tracing-opentelemetry = "0.15.0"
+base64 = "0.13"
+sha3 = "0.9"
+argon2 = {version = "0.3", features = ["std"]}
 
 [dependencies.sqlx]
 version = "0.5.7"
