--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ path="src/main.rs"
 name="zero2prod"
 
 [dependencies]
-actix-web = "4.0.0-beta.8"
+actix-web = "4.0.0-beta.16"
+actix-http = "3.0.0-beta.8"
 config = "0.11.0"
 serde = { version = "1", features = ["derive"]}
 uuid = { version = "0.8.1", features = ["v4"]}
@@ -23,7 +24,7 @@ tracing-futures = "0.2.5"
 tracing-subscriber = {version = "0.2.12", features = ["registry", "env-filter"]}
 tracing-bunyan-formatter = "0.2.6"
 tracing-log = "0.1.2"
-tracing-actix-web = "0.4.0-beta.8"
+tracing-actix-web = "0.5.0-beta.7"
 serde_json = "1.0.68"
 unicode-segmentation = "1.8.0"
 validator = "0.14.0"
@@ -31,15 +32,20 @@ reqwest = { version = "0.11.4", default-features = false, features = ["json", "r
 rand = { version = "0.8", features=["std_rng"] }
 opentelemetry = {version = "0.16.0", features=["rt-tokio", "metrics", "serialize"]}
 opentelemetry-otlp = { version = "0.9.0", features = ["http-proto", "reqwest-client"] }
-tokio = { version = "1.11", features = ["full"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 url = "2.2.2"
 tonic = "0.5.0"
 thiserror = "1.0"
 anyhow = "1"
 tracing-opentelemetry = "0.15.0"
 base64 = "0.13"
-sha3 = "0.9"
+sha3 = "0.10"
 argon2 = {version = "0.3", features = ["std"]}
+secrecy = {version = "0.8", features = ["serde"]}
+urlencoding = "2"
+htmlescape = "0.3"
+hmac = { version = "0.12", features = ["std"]}
+sha2 = "0.10"
 
 [dependencies.sqlx]
 version = "0.5.7"
