--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "zero2prod"
 version = "0.1.1"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,42 +13,51 @@ path="src/main.rs"
 name="zero2prod"
 
 [dependencies]
-actix-web = "4.0.0-beta.16"
-actix-http = "3.0.0-beta.8"
+actix-web = "4.0.1"
+actix-http = "3.0.4"
+actix-web-flash-messages = { version = "0.3", features = ["cookies"]}
 config = "0.11.0"
-serde = { version = "1", features = ["derive"]}
-uuid = { version = "0.8.1", features = ["v4"]}
+serde = { version = "1.0.136", features = ["derive"] }
+uuid = { version = "0.8.1", features = ["v4", "serde"] }
 chrono = "0.4.19"
-tracing = { version = "0.1", features = ["log"] }
+tracing = { version = "0.1.32", features = ["log"] }
 tracing-futures = "0.2.5"
-tracing-subscriber = {version = "0.2.12", features = ["registry", "env-filter"]}
-tracing-bunyan-formatter = "0.2.6"
+tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3.2"
 tracing-log = "0.1.2"
-tracing-actix-web = "0.5.0-beta.7"
-serde_json = "1.0.68"
-unicode-segmentation = "1.8.0"
+tracing-actix-web = "0.5.1"
+serde_json = "1.0.79"
+unicode-segmentation = "1.9.0"
 validator = "0.14.0"
-reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
-rand = { version = "0.8", features=["std_rng"] }
-opentelemetry = {version = "0.16.0", features=["rt-tokio", "metrics", "serialize"]}
-opentelemetry-otlp = { version = "0.9.0", features = ["http-proto", "reqwest-client"] }
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls", "cookies"] }
+rand = { version = "0.8.5", features = ["std_rng"] }
+opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics", "serialize"] }
+opentelemetry-otlp = { version = "0.10.0", features = ["http-proto", "reqwest-client"] }
+tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
 url = "2.2.2"
-tonic = "0.5.0"
-thiserror = "1.0"
-anyhow = "1"
-tracing-opentelemetry = "0.15.0"
-base64 = "0.13"
-sha3 = "0.10"
-argon2 = {version = "0.3", features = ["std"]}
-secrecy = {version = "0.8", features = ["serde"]}
-urlencoding = "2"
-htmlescape = "0.3"
-hmac = { version = "0.12", features = ["std"]}
-sha2 = "0.10"
+tonic = "0.6.2"
+thiserror = "1.0.30"
+anyhow = "1.0.56"
+tracing-opentelemetry = "0.17.2"
+base64 = "0.13.0"
+sha3 = "0.10.1"
+argon2 = { version = "0.3.4", features = ["std"] }
+secrecy = { version = "0.8.0", features = ["serde"] }
+urlencoding = "2.1.0"
+htmlescape = "0.3.1"
+hmac = { version = "0.12.1", features = ["std"] }
+sha2 = "0.10.2"
+hex = "0.4.3"
+generic-array = "0.14.5"
+actix-session = { version = "0.6", features = ["redis-rs-tls-session"]}
+
+#[dependencies.actix-session]
+#git = "https://github.com/LukeMathWalker/actix-extras"
+#branch = "rework-actix-session"
+#features = ["redis-rs-tls-session"]
 
 [dependencies.sqlx]
-version = "0.5.7"
+version = "0.5.11"
 default-features = false
 features = [
     "runtime-actix-rustls",
@@ -62,13 +71,13 @@ features = [
 
 
 [dev-dependencies]
-actix-rt = "2.0.2"
+actix-rt = "2.7.0"
 claim = "0.5.0"
-once_cell = "1.8.0"
-tokio = { version = "1.11.0", features = ["rt", "macros"] }
+once_cell = "1.10.0"
+tokio = { version = "1.17.0", features = ["rt", "macros"] }
 fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
-wiremock = "0.5"
-serde_json = "1.0.68"
-linkify = "0.5.0"
+wiremock = "0.5.11"
+serde_json = "1.0.79"
+linkify = "0.8.0"
