--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ actix-http = "3.0.4"
 actix-web-flash-messages = { version = "0.3", features = ["cookies"]}
 config = "0.11.0"
 serde = { version = "1.0.136", features = ["derive"] }
-uuid = { version = "0.8.1", features = ["v4", "serde"] }
 chrono = "0.4.19"
 tracing = { version = "0.1.32", features = ["log"] }
 tracing-futures = "0.2.5"
@@ -57,7 +56,7 @@ actix-session = { version = "0.6", features = ["redis-rs-tls-session"]}
 #features = ["redis-rs-tls-session"]
 
 [dependencies.sqlx]
-version = "0.5.11"
+version = "0.6.3"
 default-features = false
 features = [
     "runtime-actix-rustls",
@@ -66,7 +65,17 @@ features = [
     "uuid",
     "chrono",
     "migrate",
-    "offline"
+    "offline",
+    
+]
+
+[dependencies.uuid]
+version = "1.3.0"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+    "serde",
 ]
 
 
